--- a/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.html
@@ -55,6 +55,8 @@ Stay safe
 
 
   <!-- Load Facebook SDK for JavaScript -->
+
+<!--   
 <div id="fb-root"></div>
 <script>
   window.fbAsyncInit = function() {
@@ -72,11 +74,11 @@ Stay safe
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<!-- Your customer chat code -->
+
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="110261810396463">
-</div>
+</div> -->
 
 
 
