--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -11,10 +11,10 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="http://localhost:8080/getPhotos/{{activeCarouselPhoto}}" alt="">
+      <img src="/getPhotos/{{activeCarouselPhoto}}" alt="">
     </div>
     <div *ngFor="let cimg of carousels" class="carousel-item">
-      <img src="http://localhost:8080/getPhotos/{{cimg.cCode}}" alt="">
+      <img src="/getPhotos/{{cimg.cCode}}" alt="">
     </div>
    
   </div>
@@ -174,8 +174,8 @@
 
               <!--Card image-->
               <div *ngIf="p.frontCode" class="view overlay">
-                <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
-                <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
+                <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+                <a  href="JavaScript:Void(0);" (click)="sendId(p.id)">
                   <div class="mask rgba-white-slight"></div>
                 </a>
               </div>
@@ -188,12 +188,12 @@
               <!--Card content-->
               <div class="card-body text-center">
                 <!--Category & Title-->
-                <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank"  class="grey-text">
+                <a href="JavaScript:Void(0);" (click)="sendId(p.id)"  class="grey-text">
                   <h5>{{p.category}}</h5>
                 </a>
                 <h5>
                   <strong>
-                    <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]" class="dark-grey-text" target="_blank">{{p.name}}
+                    <a href="JavaScript:Void(0);" (click)="sendId(p.id)" class="dark-grey-text">{{p.name}}
                   
                     </a>
                   </strong>
@@ -243,7 +243,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" (click)="sendId(p.id)">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -306,7 +306,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -369,7 +369,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -434,7 +434,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -506,20 +506,20 @@
            
 
           <div class="md-form mb-5">
-              <input type="text" id="name" class="form-control validate" [(ngModel)]="productObj.name" required>
-              <label data-error="wrong" data-success="right" for="name">Product name</label>
+              <input mdbInput type="text" id="name" class="form-control validate" [(ngModel)]="productObj.name">
+              <label for="name">Product name</label>
             </div>
     
     
             <div class="md-form mb-5">
-              <input type="text" id="brand" class="form-control validate" [(ngModel)]="productObj.brand" required>
-              <label data-error="wrong" data-success="right" for="brand">Brand name</label>
+              <input mdbInput type="text" id="brand" class="form-control validate" [(ngModel)]="productObj.brand">
+              <label for="brand">Brand name</label>
             </div>
     
     
             <div class="md-form">
-                <textarea type="text" id="description" class="md-textarea form-control" rows="2" [(ngModel)]="productObj.description" required></textarea>
-                <label data-error="wrong" data-success="right" for="description">Product description (Within 20 words)</label>
+                <textarea type="text" id="description" class="md-textarea form-control" rows="2" [(ngModel)]="productObj.description"></textarea>
+                <label for="description">Product description (Within 20 words)</label>
               </div>
     
     
@@ -527,27 +527,27 @@
     
     
               <div class="md-form mb-5">
-                <input type="text" id="marketPrice" class="form-control validate" [(ngModel)]="productObj.marketPrice" required>
-                <label data-error="wrong" data-success="right" for="marketPrice">Market price of product</label>
+                <input mdbInput type="text" id="marketPrice" class="form-control validate" [(ngModel)]="productObj.marketPrice">
+                <label for="marketPrice">Market price of product</label>
               </div>
 
     
             <div class="md-form mb-5">
-              <input type="text" id="soldPrice" class="form-control validate" [(ngModel)]="productObj.soldPrice" required>
-              <label data-error="wrong" data-success="right" for="soldPrice">Sold price of product</label>
+              <input mdbInput type="text" id="soldPrice" class="form-control validate" [(ngModel)]="productObj.soldPrice">
+              <label for="soldPrice">Sold price of product</label>
             </div>
     
            
     
               <div class="md-form mb-5">
-                  <input type="text" id="color" class="form-control validate" [(ngModel)]="productObj.color" required>
-                  <label data-error="wrong" data-success="right" for="color">Color of product</label>
+                  <input mdbInput type="text" id="color" class="form-control validate" [(ngModel)]="productObj.color">
+                  <label for="color">Color of product</label>
                 </div>
     
     
                 <div class="md-form mb-5">
-                    <input type="text" id="quantity" class="form-control validate" [(ngModel)]="productObj.quantity" required>
-                    <label data-error="wrong" data-success="right" for="quantity">Quantity of product</label>
+                    <input mdbInput type="text" id="quantity" class="form-control validate" [(ngModel)]="productObj.quantity">
+                    <label for="quantity">Quantity of product</label>
                   </div>
       
     
@@ -600,7 +600,7 @@
     <br><br>
     <!--Material select-->
     
-        <mat-select matInput placeholder="Select a category" [(ngModel)]="productObj.category" name="category" required>
+        <mat-select matInput placeholder="Select a category" [(ngModel)]="productObj.category" name="category">
           <mat-option  [value]="category.category" *ngFor="let category of categories" >{{category.category}}</mat-option>
          
         </mat-select>
