--- a/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
@@ -96,8 +96,8 @@
 
                 <!--firstName-->
                 <div class="md-form ">
-                  <input type="text" [(ngModel)]="person.firstName" name="firstName" id="firstNameId"
-                    class="form-control" placeholder="Atif" required>
+                  <input mdbInput type="text" [(ngModel)]="person.firstName" name="firstName" id="firstNameId"
+                    class="form-control" placeholder="Atif">
                   <label for="firstNameId" class="">First name</label>
                 </div>
 
@@ -109,8 +109,8 @@
 
                 <!--lastName-->
                 <div class="md-form">
-                  <input type="text" [(ngModel)]="person.lastName" name="lastName" id="lastNameId" class="form-control"
-                    placeholder="Aslam" required>
+                  <input mdbInput type="text" [(ngModel)]="person.lastName" name="lastName" id="lastNameId" class="form-control"
+                    placeholder="Aslam">
                   <label for="lastNameId" class="">Last name</label>
                 </div>
 
@@ -130,8 +130,8 @@
               <div class="col-md-6 mb-2">
                 <!--phone-->
                 <div class="md-form mb-5">
-                  <input type="text" [(ngModel)]="person.phone" name="phone" id="phoneId" class="form-control"
-                    placeholder="017******74" required>
+                  <input mdbInput type="text" [(ngModel)]="person.phone" name="phone" id="phoneId" class="form-control"
+                    placeholder="017******74">
                   <label for="phoneId" class="">Phone Number</label>
                 </div>
 
@@ -146,7 +146,7 @@
 
                 <!--email-->
                 <div class="md-form mb-5">
-                  <input type="email" [(ngModel)]="person.email" name="email" id="emailId" class="form-control"
+                  <input mdbInput type="email" [(ngModel)]="person.email" name="email" id="emailId" class="form-control"
                     placeholder="youremail@gmail.com">
                   <label for="emailId" class="">Email (optional)</label>
                 </div>
@@ -169,8 +169,8 @@
 
                 <!--present address-->
                 <div class="md-form mb-5">
-                  <input type="text" [(ngModel)]="person.presentAddress" name="presentAddress" id="paddress"
-                    class="form-control" placeholder="Present Address" required>
+                  <input mdbInput type="text" [(ngModel)]="person.presentAddress" name="presentAddress" id="paddress"
+                    class="form-control" placeholder="Present Address">
                   <label for="paddress" class="">Present Address</label>
                 </div>
 
@@ -186,7 +186,7 @@
 
                 <!--permanent address-->
                 <div class="md-form mb-5">
-                  <input type="text" [(ngModel)]="person.permanentAddress" name="permanentAddress" id="peraddress"
+                  <input mdbInput type="text" [(ngModel)]="person.permanentAddress" name="permanentAddress" id="peraddress"
                     class="form-control" placeholder="Permanent Address">
                   <label for="peraddress" class="">Permanent Address (optional)</label>
                 </div>
