--- a/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/footer/footer.component.html
@@ -22,12 +22,12 @@
   <h4 id="qlink">Quick Links</h4><br>
   
   
-  <a href="" target="_blank"><h6 id="qlink">Home</h6></a><br>
-  <a href="aboutUs" target="_blank"><h6 id="qlink">About Us</h6></a><br>
+  <a routerLink=""><h6 id="qlink">Home</h6></a><br>
+  <a routerLink="aboutUs"><h6 id="qlink">About Us</h6></a><br>
   
-  <a href="ourProducts" target="_blank"><h6 id="qlink">Our Products</h6></a><br>
+  <a routerLink="ourProducts"><h6 id="qlink">Our Products</h6></a><br>
   
-  <a href="contactUs" target="_blank"><h6 id="qlink">Contact Us</h6></a><br>
+  <a routerLink="contactUs"><h6 id="qlink">Contact Us</h6></a><br>
 
 
 
