--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -11,10 +11,10 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/getPhotos/{{activeCarouselPhoto}}" alt="">
+      <img src="http://localhost:8080/getPhotos/{{activeCarouselPhoto}}" alt="">
     </div>
     <div *ngFor="let cimg of carousels" class="carousel-item">
-      <img src="/getPhotos/{{cimg.cCode}}" alt="">
+      <img src="http://localhost:8080/getPhotos/{{cimg.cCode}}" alt="">
     </div>
    
   </div>
@@ -174,7 +174,7 @@
 
               <!--Card image-->
               <div *ngIf="p.frontCode" class="view overlay">
-                <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+                <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
                 <a  href="JavaScript:Void(0);" (click)="sendId(p.id)">
                   <div class="mask rgba-white-slight"></div>
                 </a>
@@ -210,7 +210,7 @@
             <!--Card-->
             
             <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
             
 
 
@@ -243,7 +243,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" (click)="sendId(p.id)">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -279,7 +279,7 @@
           <!--Card-->
           
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
                   
 
         </div>
@@ -306,7 +306,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -342,7 +342,7 @@
           <!--Card-->
  
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
             
 
         </div>
@@ -369,7 +369,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -405,7 +405,7 @@
           <!--Card-->
           
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
             
 
         </div>
@@ -434,7 +434,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -470,7 +470,7 @@
           <!--Card-->
           
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
           
 
         </div>
@@ -677,6 +677,38 @@ aria-hidden="true" data-backdrop="true">
 <!--Modal: errorMsgModal modal-->
 
 
+
+
+
+      
+      <!--Modal: modalConfirmDelete-->
+      <div class="modal fade" id="modalConfirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+          <!--Content-->
+          <div class="modal-content text-center">
+            <!--Header-->
+            <div class="modal-header d-flex justify-content-center">
+              <p class="heading">Are you sure?</p>
+            </div>
+      
+            <!--Body-->
+            <div class="modal-body">
+      
+              <i class="fas fa-times fa-4x animated rotateIn"></i>
+      
+            </div>
+      
+            <!--Footer-->
+            <div class="modal-footer flex-center">
+              <a href="JavaScript:Void(0)" class="btn  btn-outline-danger" data-dismiss="modal" (click)="deletetpProductConfirm()">Yes</a>
+              <a type="button" class="btn  btn-danger waves-effect" (click)="removeDeleteId()" data-dismiss="modal">No</a>
+            </div>
+          </div>
+          <!--/.Content-->
+        </div>
+      </div>
+      <!--Modal: modalConfirmDelete-->
 
 
 
