--- a/E-Commerce-Front-End/E-Commerce-App/src/app/ourproducts/ourproducts.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/ourproducts/ourproducts.component.html
@@ -139,7 +139,7 @@
 
               <!--Card image-->
               <div *ngIf="p.frontCode" class="view overlay">
-                <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+                <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
                 <a href="JavaScript:Void(0);" (click)="sendId(p.id)">
                   <div class="mask rgba-white-slight"></div>
                 </a>
@@ -174,9 +174,9 @@
             </div>
             <!--Card-->
             
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
-            
+          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
+          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+
 
 
           </div>
@@ -208,7 +208,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" (click)="sendId(p.id)">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -244,8 +244,8 @@
           <!--Card-->
           
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
-                  
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+         
 
         </div>
         <!--Grid column-->
@@ -271,7 +271,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a [routerLink]="['productDetails', p.id]" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -307,7 +307,7 @@
           <!--Card-->
  
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
             
 
         </div>
@@ -334,7 +334,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a [routerLink]="['productDetails', p.id]">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -370,8 +370,8 @@
           <!--Card-->
           
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
-            
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+   
 
         </div>
         <!--Grid column-->
@@ -399,7 +399,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a [routerLink]="['productDetails', p.id]" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -435,8 +435,8 @@
           <!--Card-->
           
           <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)"  id="editBtn" type="button" mdbBtn color="success" (click)="getProductById(p.id)"  (click)="editProductModal.show()" mdbWavesEffect>Edit</button>
-          <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
-          
+            <button *ngIf="photoUrl && (uid===fbUid || uid === emailUid)" id="deleteBtn" type="button" mdbBtn color="danger" data-toggle="modal" data-target="#modalConfirmDelete" (click)="deleteProductById(p.id)" mdbWavesEffect>Delete</button>
+ 
 
         </div>
         <!--Grid column-->
@@ -566,6 +566,39 @@
 
 
 <!--/Add product modal-->
+
+
+
+      
+      <!--Modal: modalConfirmDelete-->
+      <div class="modal fade" id="modalConfirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+          <!--Content-->
+          <div class="modal-content text-center">
+            <!--Header-->
+            <div class="modal-header d-flex justify-content-center">
+              <p class="heading">Are you sure?</p>
+            </div>
+      
+            <!--Body-->
+            <div class="modal-body">
+      
+              <i class="fas fa-times fa-4x animated rotateIn"></i>
+      
+            </div>
+      
+            <!--Footer-->
+            <div class="modal-footer flex-center">
+              <a href="JavaScript:Void(0)" class="btn  btn-outline-danger" data-dismiss="modal" (click)="deletetpProductConfirm()">Yes</a>
+              <a type="button" class="btn  btn-danger waves-effect" (click)="removeDeleteId()" data-dismiss="modal">No</a>
+            </div>
+          </div>
+          <!--/.Content-->
+        </div>
+      </div>
+      <!--Modal: modalConfirmDelete-->
+
 
 
 
