--- a/E-Commerce-Front-End/E-Commerce-App/src/app/selltous-details/selltous-details.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/selltous-details/selltous-details.component.html
@@ -36,12 +36,12 @@
 
 
     <div *ngIf="product.frontCode" class="carousel-item active">
-      <img src="/getPhotos/{{product.frontCode}}" alt="">
+      <img src="http://localhost:8080/getPhotos/{{product.frontCode}}" alt="">
     </div>
 
 
     <div *ngIf="product.backCode" class="carousel-item">
-      <img src="/getPhotos/{{product.backCode}}" alt="">
+      <img src="http://localhost:8080/getPhotos/{{product.backCode}}" alt="">
     </div>
 
 
@@ -51,23 +51,23 @@
 
 
     <div *ngIf="product.leftCode" class="carousel-item">
-        <img src="/getPhotos/{{product.leftCode}}" alt="">
+        <img src="http://localhost:8080/getPhotos/{{product.leftCode}}" alt="">
       </div>
   
   
       <div *ngIf="product.rightCode" class="carousel-item">
-        <img src="/getPhotos/{{product.rightCode}}" alt="">
+        <img src="http://localhost:8080/getPhotos/{{product.rightCode}}" alt="">
       </div>
 
 
 
     <div *ngIf="product.headCode" class="carousel-item">
-        <img src="/getPhotos/{{product.headCode}}" alt="">
+        <img src="http://localhost:8080/getPhotos/{{product.headCode}}" alt="">
       </div>
   
   
       <div *ngIf="product.footCode" class="carousel-item">
-        <img src="/getPhotos/{{product.footCode}}" alt="">
+        <img src="http://localhost:8080/getPhotos/{{product.footCode}}" alt="">
       </div>
 
 
