--- a/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/aboutus/aboutus.component.html
@@ -9,7 +9,7 @@
 
     <!-- Card image -->
     <div class="view overlay">
-      <img class="card-img-top" src="assets/tijara.jpg" alt="Card image cap">
+      <img class="card-img-top" src="assets/tijara.jpg" alt="">
       <a href="JavaScript:Void(0)">
         <div class="mask rgba-white-slight"></div>
       </a>
