--- a/E-Commerce-Front-End/E-Commerce-App/src/app/ourproducts/ourproducts.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/ourproducts/ourproducts.component.html
@@ -139,7 +139,7 @@
 
               <!--Card image-->
               <div *ngIf="p.frontCode" class="view overlay">
-                <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+                <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
                 <a href="JavaScript:Void(0);" (click)="sendId(p.id)">
                   <div class="mask rgba-white-slight"></div>
                 </a>
@@ -208,7 +208,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a href="JavaScript:Void(0);" (click)="sendId(p.id)">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -271,7 +271,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a [routerLink]="['productDetails', p.id]" >
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -334,7 +334,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a [routerLink]="['productDetails', p.id]">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -399,7 +399,7 @@
 
             <!--Card image-->
             <div *ngIf="p.frontCode" class="view overlay">
-              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
               <a [routerLink]="['productDetails', p.id]" >
                 <div class="mask rgba-white-slight"></div>
               </a>
