--- a/E-Commerce-Front-End/E-Commerce-App/src/app/selltous/selltous.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/selltous/selltous.component.html
@@ -15,7 +15,7 @@
 
               <!--Card image-->
               <div *ngIf="p.frontCode" class="view overlay">
-                <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+                <img src="/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
                 <a  [routerLink]="['sellToUs', p.id]" >
                   <div class="mask rgba-white-slight"></div>
                 </a>
